--- a/style.css
+++ b/style.css
@@ -5,12 +5,6 @@ body {
 
 }
 
-/* định dạng logo trên cùng */
-.logo {
-  height: 60px;
-  margin-top: 8px;
-  margin-right: 30px;
-}
 /* định dạng logo kính lúp 2 ảnh ko cùng format nên phải định dạng khác nhau */
 .logo1 {
   height: 30px;
@@ -18,30 +12,6 @@ body {
   margin-right: 70px;
 }
 
-/* định dạng văn bản menu trên cùng */
-a {
-  font-size: 15px;
-  color: aliceblue;
-  padding: 0px 12px;
-  text-decoration: none;
-  margin-top: 13px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-/* định dạng văn bản menu sổ xuống */
-.dropbtn {
-  background-color: rgb(26, 27, 82);
-  color: white;
-  padding: 0px 12px;
-  font-size: 15px;
-  text-decoration: none;
-  border: none;
-  cursor: pointer;
-  margin-top: 13px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
 
 .dropdown {
   margin-left: 10px;
@@ -133,5 +103,80 @@ a {
   }
   99% {
     margin-left: -4000px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .menu_top {
+    height: 70px;
+    width: 100%;
+    background-color: rgb(26, 27, 82);
+    position: fixed;
+    top: 0px;
+  }
+  .logo{
+  height: 50px;
+  margin-top: -5px;
+  margin-left: 45px;
+  }
+  a {
+    font-size: 12px;
+    color: aliceblue;
+    padding: 0px 8px;
+    text-decoration: none;
+    margin-top: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  .dropbtn {
+    background-color: rgb(26, 27, 82);
+      color: white;
+      padding: 0px 8px;
+      font-size: 12px;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+      margin-top: 13px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    }
+}
+@media screen and (min-width: 1920px) {
+
+  a {
+    font-size: 15px;
+    color: aliceblue;
+    padding: 0px 12px;
+    text-decoration: none;
+    margin-top: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  
+  /* định dạng văn bản menu sổ xuống */
+  .dropbtn {
+  background-color: rgb(26, 27, 82);
+    color: white;
+    padding: 0px 12px;
+    font-size: 15px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    margin-top: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  .menu_top {
+    height: 100px;
+    width: 100%;
+    background-color: rgb(26, 27, 82);
+    position: fixed;
+    top: 0px;
+  }
+  /* định dạng logo trên cùng */
+  .logo {
+    height: 60px;
+    margin-top: 8px;
+    margin-right: 30px;
   }
 }
